# polars-serde

./: Cargo.toml  README.md
.github/workflows/: cargo.yaml
src/: de.rs  lib.rs
src/de/: any_value.rs  data_frame.rs  macros.rs  row.rs
