[package]
name = "polars-serde"
version = "0.2.1"
edition = "2024"

description = "deserialize from polars"
license = "MIT"
repository = "https://github.com/Hakuyume/polars-serde"

[package.metadata.docs.rs]
all-features = true

[features]
dtype-array = ["polars-core/dtype-array"]
dtype-categorical = ["polars-core/dtype-categorical"]
dtype-struct = ["polars-core/dtype-struct"]
rows = ["polars-core/rows"]

[dependencies]
polars-core = { version = "0.54.4", default-features = false }
serde = "1.0.228"
thiserror = "2.0.18"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
